Fixes alignment issues with buttons on wider screens (#385)
Fixes button alignment as well as accordion button alignment

--- a/manon/button-base.scss
+++ b/manon/button-base.scss
@@ -129,13 +129,16 @@ input[type="reset"] {
     pointer-events: none;
   }
 
+  /* Buttons can not be flex containers as it gives issues with line breaks */
+  /* It does work on wider screens. So using flex box where possible. */
   @media (min-width: $breakpoint) {
     min-width: var(--button-base-min-width);
+    display: flex;
   }
 }
 
-/* Buttons can not be flex containers */
-/* But these elements can. So using flex box where possible. */
+/* Buttons can not be flex containers as it gives issues with line breaks */
+/* It does work on other elements. So using flex box where possible. */
 a.button,
 input[type="button"],
 input[type="submit"],
